<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include
        android:id="@id/title"
        layout="@layout/layout_title"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_shopcart_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="none"/>

    <View
        android:id="@+id/v_line1"
        android:layout_width="match_parent"
        android:layout_height="1.0dip"
        android:layout_above="@+id/rl_shopcart_botton"
        android:background="@color/gray_e4e4e4"/>

    <RelativeLayout
        android:id="@id/rl_shopcart_botton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <CheckBox
            android:id="@+id/cb_checked_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:button="@null"
            android:drawableLeft="@drawable/shopping_cart_select_selector"
            android:drawablePadding="5.0dip"
            android:paddingBottom="8.0dip"
            android:paddingTop="8.0dip"
            android:text="@string/check_all"
            android:textColor="@color/bg_646464"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_payment"
            android:layout_width="100.0dip"
            android:layout_height="40.0dip"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/nowbuy_button_bg_selector"
            android:text="提交"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_checked_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:layout_toLeftOf="@id/btn_payment"
            android:text="@string/price"
            android:textColor="@color/red_da1025"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/tv_rmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:layout_toLeftOf="@id/tv_checked_money"
            android:text="合计:"
            android:textColor="@color/gray_999999"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tv_piece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_rmb"
            android:text="@string/shopping_cart_artwork"
            android:textColor="@color/gray_999999"
            android:textSize="14dp"/>


        <TextView
            android:id="@+id/tv_checked_artwork_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_toLeftOf="@id/tv_piece"
            android:text="@string/number"
            android:textColor="@color/red_da1025"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_checked_artwork_num"
            android:text="@string/shopping_cart_total"
            android:textColor="@color/gray_999999"
            android:textSize="14dp"/>


    </RelativeLayout>

</LinearLayout>